<resources>
    <string name="app_name">RAF Trading</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_lbl">Please login to start trading</string>
    <string name="username_lbl">Username</string>
    <string name="password_lbl">Password</string>
    <string name="mail_lbl">Email</string>
    <string name="login_btn">Login</string>
    <string name="mail_error_msg">Please enter a valid mail address!</string>
    <string name="password_error_msg">Password must have at least 5 characters!</string>
    <string name="logout_btn">Log Out</string>

    <string name="discover_btn">Discover</string>
    <string name="portfolio_btn">Portfolio</string>
    <string name="profile_btn">Profile</string>



</resources>