<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            android:scrollbarThumbVertical="@color/black">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_app_logo_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_lbl"
                android:textSize="24sp"
                android:textColorHighlight="@color/design_default_color_primary"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_lbl"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_lbl"
                android:lines="1"
                android:maxLines="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_lbl"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:hint="example@mail.com"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_lbl"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_lbl"
                android:lines="1"
                android:maxLines="1"
                />


            <TextView
                android:id="@+id/mailErrorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_error_msg"
                android:textSize="16sp"
                android:textColor="@color/red"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/passwordErrorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_error_msg"
                android:textSize="16sp"
                android:textColor="@color/red"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>