<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemBottomMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layoutMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top">

        <Button
            android:id="@+id/btnDiscoverFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_12dp"
            android:paddingStart="@dimen/size_12dp"
            android:paddingEnd="@dimen/size_12dp"
            android:text="@string/discover_btn" />

        <Button
            android:id="@+id/btnPortfolioFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_12dp"
            android:paddingStart="@dimen/size_12dp"
            android:paddingEnd="@dimen/size_12dp"
            android:text="@string/portfolio_btn" />

        <Button
            android:id="@+id/btnProfileFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_12dp"
            android:paddingStart="@dimen/size_12dp"
            android:paddingEnd="@dimen/size_12dp"
            android:text="@string/profile_btn" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>